<resources>
    <string name="app_name">LawQuiz</string>
    <string name="question_default">Тут будет вопрос</string>
    <string name="answer_default1">Ответ 1</string>
    <string name="answer_default2">Ответ 2</string>
    <string name="answer_default3">Ответ 3</string>
    <string name="answer_default4">Ответ 4</string>
    <string name="cheat_button">Подсказка</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="answer_default">Тут будет ответ</string>
    <string name="warning_text">Вы уверенны, что хотите сделать это?</string>
    <string name="show_answer_button">Показать ответ</string>
    <string name="rule">Правила квиза: вам будет предложено решить 4 вопроса с 2 вариантами ответа и 6 вопросов с 4 вариантами ответа,
    вопросы первого типа оцениваются в 1 балл, 2-ого - в 2 балла. Также при решении второй части вам будет предложено 2 подсказки формата
    50/50. Отличным результатом будет считаться, если вы наберёте более 13 очков за сессию без использования подсказок. Удачи вам!</string>
    <string name="result">Last result: </string>
    <string name="cheat">Used cheat: </string>
</resources>