<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/question_default" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_button1"
            android:text="@string/answer_default1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_button2"
            android:text="@string/answer_default2" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_button3"
            android:text="@string/answer_default3" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_button4"
            android:text="@string/answer_default4" />
    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cheat_button" />

    <ScrollView
        android:id="@+id/answer_scroll_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/answer_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleanswer_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_default"/>
            <TextView
                android:id="@+id/answer_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_button"
            android:visibility="invisible"
            android:layout_width="52dp"
            android:layout_height="51dp"
            android:contentDescription="@string/prev_button"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/next_button"
            android:visibility="invisible"
            android:layout_width="53dp"
            android:layout_height="50dp"
            android:contentDescription="@string/next_button"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

</LinearLayout>